--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -18,4 +18,12 @@
   <string name="quantity">Quantity</string>
   <string name="icon_minus">-</string>
   <string name="icon_plus">+</string>
+    <string name="dubai">Dubai</string>
+  <string name="temperature_size">37</string>
+  <string name="degree">℃</string>
+  <string name="precipitation">Precipitation</string>
+  <string name="not_availbale">NOT AVAILBALE</string>
+  <string name="humidity">Humidity</string>
+  <string name="wind">Wind</string>
+    <string name="reviews">reviews</string>
 </resources>
